bookinfo.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: green
  namespace: green
spec:
  parentRefs:
    - name: shared-http
      namespace: kube-system
      sectionName: http
  hostnames:
    - "colors.10.0.11.104.sslip.io"
  rules:
    - matches:
        - headers:
            - name: X-Color
              value: green
      backendRefs:
        - name: green-service
          namespace: green
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blue
  namespace: blue
spec:
  parentRefs:
    - name: shared-http
      namespace: kube-system
      sectionName: http
  hostnames:
    - "colors.10.0.11.104.sslip.io"
  rules:
    - matches:
        - headers:
            - name: X-Color
              value: blue
      backendRefs:
        - name: blue-service
          namespace: blue
          port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-service
  namespace: green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-service
  template:
    metadata:
      labels:
        app: green-service
    spec:
      containers:
        - name: green-service
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: green-service-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: green-service-volume
          configMap:
            name: green-service-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-service
  namespace: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-service
  template:
    metadata:
      labels:
        app: blue-service
    spec:
      containers:
        - name: blue-service
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: blue-service-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: blue-service-volume
          configMap:
            name: blue-service-config
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
  namespace: green
spec:
  selector:
    app: green-service
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
  namespace: blue
spec:
  selector:
    app: blue-service
  ports:
    - port: 80
      targetPort: 80
